solved evaluate error

--- a/plugin/evaluate.html
+++ b/plugin/evaluate.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="ko">
-        
-<!--<script src="jquery-3.1.0.min.js"></script>-->
 <head>
         <script src="eventPage.js"></script>
     <style>
@@ -14,6 +12,7 @@
             text-indent: -9999px;
             cursor: pointer;
           }
+          .starR.on{background-position:0 0;}
     </style>
 </head>
 <body>
