--- a/plugin/evaluate.html
+++ b/plugin/evaluate.html
@@ -3,7 +3,6 @@
         
 <!--<script src="jquery-3.1.0.min.js"></script>-->
 <head>
-        <script src="eventPage.js"></script>
     <style>
         .starR{
             background: url('http://miuu227.godohosting.com/images/icon/ico_review.png') no-repeat right 0;
@@ -13,7 +12,8 @@
             display: inline-block;
             text-indent: -9999px;
             cursor: pointer;
-          }
+        }
+        .starR.on{background-position:0 0;}
     </style>
 </head>
 <body>
