--- a/plugin/evaluate.html
+++ b/plugin/evaluate.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
+
+<!--<script src="jquery-3.1.0.min.js"></script>-->
 <head>
+        <script src="eventPage.js"></script>
+        <script src="popup.js"></script>
     <style>
         .starR{
             background: url('http://miuu227.godohosting.com/images/icon/ico_review.png') no-repeat right 0;
@@ -10,15 +14,36 @@
             display: inline-block;
             text-indent: -9999px;
             cursor: pointer;
-        }
-        .starR.on{background-position:0 0;}
+          }
     </style>
 </head>
 <body>
-    <form method="post" name="eavlForm">
+
+        <!-- 별점 -->
+        <div style="margin-top:20px;width:600px;height:50px;text-align: center;">
+                <form method="post" name="score" id="score">
+                    <div style="display: inline-block;text-align: center;margin-right:10px;">
+                        <p style="color: #848484;margin:0;">Are you satisfied with the result?</p>
+                        <p style="color: #848484;margin:0;">Then leave a star!</p>
+                    </div>
+                    <div id="star_rating" style="display: inline-block;vertical-align: 15px;"></div>
+
+                    <input type="button" name="eval" id="eval" value="submit!">
+                </form>
+            </div>
+        </div>
+
+        <div class="footer">
+            <div>
+                Is there any problem? Please click
+                <a href="https://forms.gle/J4knJ8CZGgb7XDdKA" target="_blank">Here</a>
+            </div>
+        </div>
+
+    <!-- <form method="post" name="eavlForm">
         <h2>더 나은 프로그램을 위해 평가해주세요!</h2>
 
-            <!--<input type="radio" name="evaluate" id="eval1" value="1">
+            <input type="radio" name="evaluate" id="eval1" value="1">
             <label for="eval1"><strong><font size="3">★</font></strong></label>
 
             <input type="radio" name="evaluate" id="eval2" value="2">
@@ -34,9 +59,9 @@
             <label for="eval5"><strong><font size="3">★★★★★</font></strong></label>
 
             <input type="button" name="eval" id="eval" value="평가하기">
-            <div id="thank"></div>
-            -->
-            <div class="starRev">
+            <div id="thank"></div> -->
+
+            <!-- <div class="starRev">
                     <span class="starR on">별1</span>
                     <span class="starR">별2</span>
                     <span class="starR">별3</span>
@@ -49,12 +74,12 @@
                     <span class="starR">별10</span>
 
             </div>
-            <div align = "left"> 
+            <div align = "left">
                 <p></p>
                 <input type="button" input name="eval" id="eval" value="평가하기">
-            </div>
-                  
-    </form>
+            </div> -->
+
+    <!-- </form>  -->
 
 </body>
 </html>
