--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
+
 <html>
+<!--
+<script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
+<script src="http://code.jquery.com/jquery-latest.js"></script>
+-->
     <head>
         <title>Text summary</title>
        <!-- <script integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script> -->
@@ -9,6 +17,8 @@
        <link rel="stylesheet" type="text/css" href="style.css?ver=111">
        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
        <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
+       <!-- <link rel="stylesheet" href="jquery.raty.css"> -->
+       <script src="jquery.raty.js"></script>
        <style>
            /* div { */
                /* color : white;
@@ -55,7 +65,7 @@
             <!-- <div id = "header">
                 <h1>
                     Summary Help !! <img align = "right", src = 'iconWHITE.PNG'>
-                </h1>     
+                </h1>
             </div> -->
             <div id = "content cnt" style="text-align: center;">
                 <form id="textForm" name="textForm">
@@ -64,14 +74,19 @@
                         <!-- <form id="textForm" name="textForm"> -->
                         <div id="result"></div>
                         <textarea name="article" id="article" cols="36" rows="10" class="form-control"></textarea>
+                        <input type="button" id="submit" name="submit" value="Summary" class="btn btn-outline-primary btn-block" style="border-color:#5882FA;"/>
                     </div>
-                <div id = "summaryText" style="display: inline-block;margin-right: 5px;">
+                </form>
+
+                    <div id = "summaryText" style="display: inline-block;margin-right: 5px;">
                     <!--서머리 버튼을 누르면, 옆 텍스트에어리어에 서머리된 내용을 가지고 온다.-->
                     <h3 class="text">Result</h3>
                     <textarea id="summary" type="text" name = "summary-ajax" cols = "36" rows ="10" class="form-control"></textarea>
                 </div>
-                <div style="width:130px;text-align: center;display: inline-block;margin-top: 10px;">
-                    <input type="button" id="submit" name="submit" value="Summary" class="btn btn-outline-primary btn-block" style="border-color:#5882FA;"/>
+                <!--
+                    <img src="sh_icon.png" height="512" width="512"/>
+                    <div style="width:130px;text-align: center;display: inline-block;margin-top: 10px;">
+-->
                 </div>
             </div>
             <!-- <div> <center>
@@ -79,15 +94,9 @@
                 </center>
             </div> -->
             <div id="evaluate"></div>
-        </form>
-        </div>
 
-        <div class="footer">
-            <div>
-                Is there any problem? Please click
-                <a href="https://forms.gle/J4knJ8CZGgb7XDdKA" target="_blank">Here</a>
-            </div>
-        </div>   
+
+
     </body>
 
 </html>
