--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -65,23 +65,34 @@
                     Summary Help !! <img align = "right", src = 'iconWHITE.PNG'>
                 </h1>
             </div> -->
+
             <div id = "content cnt" style="text-align: center;">
                 <form id="textForm" name="textForm">
                     <div id = "originalText" style="display: inline-block;margin-right: 10px;">
+                        <div style="float: left">
                         <h3 class="text">Original</h3>
                         <!-- <form id="textForm" name="textForm"> -->
                         <div id="result"></div>
-                        <textarea name="article" id="article" cols="36" rows="10" class="form-control"></textarea>
+                            <textarea name="article" id="article" cols="36" rows="10" class="form-control"></textarea>
                     </div>
+                </div>
+
                 <div id = "summaryText" style="display: inline-block;margin-right: 5px;">
                     <!--서머리 버튼을 누르면, 옆 텍스트에어리어에 서머리된 내용을 가지고 온다.-->
+                    <div style="float: right">
                     <h3 class="text">Result</h3>
                     <textarea id="summary" type="text" cols = "36" rows ="10" class="form-control"></textarea>
+                    </div>
+
                 </div>
+                    <br>
                 <div style="width:130px;text-align: center;display: inline-block;margin-top: 10px;">
+
                     <input type="button" id="submit" name="submit" value="Summary" class="btn btn-outline-primary btn-block" style="border-color:#5882FA;"/>
+                    </div>
                 </div>
             </div>
+
             <!-- <div> <center>
                     <input type="button" id="submit" name="submit" value="summary !!" />
                 </center>
