--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -15,7 +15,7 @@
         <script src="jquery-3.1.0.min.js"></script>
        <script src="popup.js"></script>
        <script src="eventPage.js"></script>
-       <link rel="stylesheet" type="text/css" href="style.css?ver=111">
+       <link rel="stylesheet" type="text/css" href="style.css">
        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
        <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
        <!-- <link rel="stylesheet" href="jquery.raty.css"> -->
